--- a/config-data-main/account-microservice.yml
+++ b/config-data-main/account-microservice.yml
@@ -6,7 +6,7 @@ spring:
         name: account-microservice
     data:
         mongodb:
-            host: mongodb
+            host: localhost
             port: 27017
             database: BankAccount
 
