--- a/config-data-main/wallet-microservice.yml
+++ b/config-data-main/wallet-microservice.yml
@@ -6,11 +6,11 @@ spring:
         name: wallet-microservice
     data:
         mongodb:
-            host: mongodb
+            host: localhost
             port: 27017
             database: BankWallet
 
 eureka:
     client:
         serviceUrl:
-            defaultZone: http://eureka-server:8761/eureka/
+            defaultZone: http://localhost:9999/eureka/
