--- a/config-data-main/movement-coin-microservice.yml
+++ b/config-data-main/movement-coin-microservice.yml
@@ -9,7 +9,7 @@ spring:
         mongodb:
             host: localhost
             port: 27017
-            database: BankWallet
+            database: BankCoin
 
 eureka:
     client:
